Parser.java
import java.util.*;

/* Akshat Singhal - Chris Fry */
/* Parser.java 
   performs parsing for the Akshat and Chris Compiler (ACC)
   parse() returns a parse tree if successful, an error node if not.
*/

public class Parser
{
    private ParseStack stack;
    
    final int PROGRAM=0;
    final int VARDECL=1;
    final int FUNDECL=2;
    final int PARAM=3;
    final int COMPSTMT=4;
    final int LOCALDECS=5;
    final int STMTLIST=6;
    final int STATEMENT=7;
    final int EXPRSTMT=8;
    final int IFSTMT=9;
    final int IFSTART=10;
    final int IFREM=11;
    final int WHILESTMT=12;
    final int FORSTMT=13;
    final int RETURNSTMT=14;
    final int OPTEXPR=15;
    final int PARAMS=16;
    final int EXPR=17;
    final int OREXPR=18;
    final int RELEXPR=19;
    final int ADDEXPR=20;
    final int TERM=21;
    final int UNARYEXPR=22;
    final int PRIMARYEXPR=23;
    final int ARGS=24;


    ArrayList errors; // instantiate in constructor
    boolean error = false;
    Lexer lexer;
  
    public Parser(Lexer lexer){
	stack = new ParseStack(lexer);
	this.lexer= lexer;
	errors = new ArrayList();
    }

    public Node parse()
    {
	boolean succ=parseProgram();	
	errors.addAll(lexer.errorList);	
	if (succ && (!error) && (lexer.errorList.isEmpty())) {
	    ProgramNode progNode = (ProgramNode)stack.pop();
	    return progNode;
	}
	else { 
	    return new ErrorNode();
	}
    }




    private boolean parseProgram()
    {
	ProgramNode progNode = new ProgramNode(0);
	Object tempNode;
	int old_stackpointer = stack.getStackPointer();

	boolean succ = true;
	int numDecs = 0;



	while(succ==true)
	    {

		succ = parseVarDecl();
		if(!succ){		    
		    succ = parseFunDecl();				    
		}

		if(succ)
		    {
			stack.incStackPointer();
			numDecs++;
		    }
		
	    }


	
	if(numDecs != 0){
	    progNode = new ProgramNode(numDecs);/*so we don't need a dynamic array*/
	   	    
	    for(int i = numDecs-1; i >= 0;i--){
	
		if (stack.get(stack.getStackPointer()-1) instanceof Node)
		    progNode.children[i]=(Node)stack.remove();
	
	    }

	}

	if (stack.getNext() instanceof EOFToken)
	    {//NIRVANA:reaching EOF at the end of a valid program
		progNode.linenumber = 0;
		stack.insert(progNode);
		return true;
	    }
	
	//something else but not EOF after a valid Program
	//don't stick on the correct program parsed so far,
	// just go to errorHandler()
	errorHandler(old_stackpointer, PROGRAM, "EOF");
	return false;
	    
	
	// }
    }
    
    private boolean errorHandler(int old_stackpointer, int function, Object expected){
	Object temp;
	stack.decStackPointer();
	temp = stack.getNext();
	if(temp instanceof EOFToken){
	    return false; 
	}
	
	if(! (temp instanceof Token)){
	    errors.add("Compiler error: " + temp);
	    return false;
	}




	
	switch (function){
	case PROGRAM:
	    temp = stack.get(stack.getStackPointer()-1);
	    if(temp instanceof ErrorToken){
		errors.add("Line #" + ((ErrorToken)temp).lineNumber + " " + ((ErrorToken)temp).stringvalue); 
		error=true;
		return false;
	    }
	    else{
		errors.add("Line #" + ((Token)temp).lineNumber + " " + "'EOF' expected, '" + temp + "' found");
		error=true;
		return false;
	    }
	    

	case VARDECL:
	    temp = stack.get(stack.getStackPointer()-1);
	    if(temp instanceof ErrorToken){
		errors.add("Line #" + ((ErrorToken)temp).lineNumber + " " + ((ErrorToken)temp).stringvalue); 
		error=true;
		stack.remove();
		stack.setStackPointer(old_stackpointer);
		return true;
	    }
	    else{
		stack.setStackPointer(old_stackpointer);
		return false;
	    }






	case EXPRSTMT:
	case IFSTMT:
	case IFSTART:
	case IFREM:
	case WHILESTMT:
	case FORSTMT:
	case RETURNSTMT:
	case OPTEXPR:
	case EXPR:
	case OREXPR:
	case RELEXPR:
	case ADDEXPR:
	case TERM:
	case UNARYEXPR:
	case PRIMARYEXPR:
	case ARGS:
	case STATEMENT:
	case PARAM:
	case FUNDECL:
	    temp = stack.get(stack.getStackPointer()-1);
	    if(temp instanceof ErrorToken){
		errors.add("Line #" + ((ErrorToken)temp).lineNumber + " " + ((ErrorToken)temp).stringvalue); 
		error=true;
		stack.remove();
		stack.setStackPointer(old_stackpointer);
		return false;
	    }
	    else{
		errors.add("Line #" + ((Token)temp).lineNumber + " " + "'" + expected + "' expected, '" + temp + "' found");
		error=true;
		return false;
	    }

	case STMTLIST:
	case LOCALDECS:
	case COMPSTMT:
	case PARAMS:
	    temp = stack.get(stack.getStackPointer()-1);
	    if(temp instanceof ErrorToken){
		errors.add("Line #" + ((ErrorToken)temp).lineNumber + " " + ((ErrorToken)temp).stringvalue); 
		error=true;
		stack.remove();
		stack.setStackPointer(old_stackpointer);
		return true;
	    }
	    else{
		errors.add("Line #" + ((Token)temp).lineNumber + " " + "'" + expected + "' expected, '" + temp + "' found");
		error=true;
		return false;
	    }
	
	}
	return false;
    }



    private boolean parseVarDecl()
    {
	VarDeclNode varNode;
	Object temp;
	int old_stackpointer = stack.getStackPointer();
	
	temp = stack.getNext();
	if(temp instanceof EOFToken)
	    {
		stack.setStackPointer(old_stackpointer);
		return false;
	    }
	
	if(!(temp instanceof Token)){
	    errorHandler(old_stackpointer, VARDECL, null);
	    return false;
	}
	
	
	if(((Token)temp).symbolNumber == 0 || ((Token)temp).symbolNumber == 1) {//If token is an int or float
	    
	    temp=stack.getNext();
	    
	    if(temp instanceof IdentifierToken){ //If token is an identifier 
		
		temp=stack.getNext();
		
		if(((Token)temp).symbolNumber == 34){ //If token is a ";"
		    
		    varNode = new VarDeclNode(2);
		    
		    temp=stack.remove(); //get rid of the semic
		    temp=stack.remove(); //get the id
		    varNode.children[1]=new IdentifierNode((Token)temp);
		    temp=stack.remove(); //get the type
		    String string = temp.toString();
		    if(string.compareTo("int") == 0)
			varNode.children[0]=new IntNode((Token)temp);
		    else
			varNode.children[0]=new FloatNode((Token)temp);
		    varNode.linenumber = ((Token)temp).lineNumber;
		    stack.insert(varNode);
		    return true;
		}
		else if(((Token)temp).symbolNumber == 10) //If token is a "["
		    temp=stack.getNext();
		else if(errorHandler(old_stackpointer, VARDECL, null))
		    return parseVarDecl();
		else
		    return false;
		
		if(temp instanceof IntegerToken) //if token is an integer
		    temp=stack.getNext();
		else if(errorHandler(old_stackpointer, VARDECL, null))
		    return parseVarDecl();
		else
		    return false;
		
		
		if(((Token)temp).symbolNumber == 11) //if token is an "]"
		    temp=stack.getNext();
		else if(errorHandler(old_stackpointer, VARDECL, null))
		    return parseVarDecl();
		else
		    return false;
		
		
		if(((Token)temp).symbolNumber == 34) {//if token is a ";"
		    
		    varNode = new VarDeclNode(3);
		    
		    temp=stack.remove(); //get rid of the semic
		    temp=stack.remove(); //get rid of the "]"
		    temp=stack.remove(); //get the num
		    varNode.children[2]=new NumNode((IntegerToken)temp);
		    temp=stack.remove(); //get rid of the "["
		    temp=stack.remove(); //get the id
		    varNode.children[1]=new IdentifierNode((Token)temp);
		    temp=stack.remove(); //get the type



		    String string = temp.toString();
		    if(string.compareTo("int") == 0)
			varNode.children[0]=new IntNode((Token)temp);
		    else
			varNode.children[0]=new FloatNode((Token)temp);
		    varNode.linenumber = ((Token)temp).lineNumber;
		    stack.insert(varNode);
		    return true;
		}					
		else if(errorHandler(old_stackpointer, VARDECL, null))
		    return parseVarDecl();
		else
		    return false;
	    }			  
	    else if(((Token)temp).symbolNumber == 14) //if token is a "*"
		temp=stack.getNext();
	    else if(errorHandler(old_stackpointer, VARDECL, null))
		return parseVarDecl();
	    else
		return false;
	    
	    
	    if(temp instanceof IdentifierToken) //if token is an identifier
		temp=stack.getNext();
	    else if(errorHandler(old_stackpointer, VARDECL, null))
		return parseVarDecl();
	    else
		return false;
	    
	    
	    if(((Token)temp).symbolNumber == 34) {//if token is a ";"
		
		varNode = new VarDeclNode(3);
		
		temp=stack.remove(); //get rid of the semic
		temp=stack.remove(); //get the id
		varNode.children[2]=new IdentifierNode((Token)temp);
		temp=stack.remove(); //get the "*"
		varNode.children[1]=new TerminalNode((Token)temp);
		temp=stack.remove(); //get the type
		String string = temp.toString();
		if(string.compareTo("int") == 0)
		    varNode.children[0]=new IntNode((Token)temp);
		else
		    varNode.children[0]=new FloatNode((Token)temp);
		varNode.linenumber=((Token)temp).lineNumber;
		stack.insert(varNode);
		return true;
	    }
	}
	else if(((Token)temp).symbolNumber == 2){// void
	    temp=stack.getNext();
	    
	    
	    if((temp instanceof Token) && ((Token)temp).symbolNumber == 14)
		temp=stack.getNext();

	    if(temp instanceof IdentifierToken)
		temp=stack.getNext();
	    else if(errorHandler(old_stackpointer, VARDECL, null))
		return parseVarDecl();
	    else
		return false;
	    
	    
	    if(((Token)temp).symbolNumber == 34){//if token is a ";"
		
		varNode = new VarDeclNode(3);
		
		temp=stack.remove(); //get rid of the semic
		temp=stack.remove(); //get the id
		varNode.children[2]= new IdentifierNode((Token)temp);
		temp=stack.remove(); //get the semic
		varNode.children[1]= new TerminalNode((Token)temp);
		temp=stack.remove(); //get the type
		varNode.children[0]= new VoidNode((Token)temp);
		varNode.linenumber=((Token)temp).lineNumber;
		stack.insert(varNode);
		return true;
	    }
	}
	else if(errorHandler(old_stackpointer, VARDECL, null))
	    return parseVarDecl();
	else
	    return false;
	
	//shouldn't ever get here  
	stack.setStackPointer(old_stackpointer);
	return false;
	
    }// end of parseVarDecl()

    
    private boolean parseFunDecl(){
	FunDeclNode funNode = new FunDeclNode(0);
	Object temp;
	boolean succ = false;
	boolean pointerreturn = false;
	int old_stackpointer = stack.getStackPointer();
	
	temp=stack.getNext();
	
	if(!(temp instanceof Token)){
	    errorHandler(old_stackpointer, FUNDECL, "Token");
	    return false;
	}
	    
	
	if (temp instanceof EOFToken)
	    {
		stack.setStackPointer(old_stackpointer);
		return false;
	    }
		    
	if (((Token)temp).symbolNumber == 0 || ((Token)temp).symbolNumber == 1 || ((Token)temp).symbolNumber == 2) //if token is int, float, or void
	    temp=stack.getNext();
	else if(errorHandler(old_stackpointer, FUNDECL, "int, float, or void"))
	    return false;
	
	if (((Token)temp).symbolNumber == 14){
	    temp=stack.getNext();
	    pointerreturn=true;
	}
	
	    
	
	if(temp instanceof IdentifierToken) //If token is an identifier	
	    {
		succ = parseParams(); //try to parse next tokens as params
		//stack.incStackPointer();
	    }
	else if(errorHandler(old_stackpointer, FUNDECL, "identifier"))
	    return parseVarDecl();
	else
	    return false;
	   
	
	if(succ){
	    succ = parseCompStmt(); //try to parse next tokens as a compd statement
	    stack.incStackPointer();
	}
	else if(errorHandler(old_stackpointer, FUNDECL, "valid parameters"))
	    return parseVarDecl();
	else
	    return false;
	    

	if (succ){
 	    if (!pointerreturn){
		funNode = new FunDeclNode(4);
		temp=stack.remove();
	    
		funNode.children[3]= (CompStmtNode)temp;
		    
	 
		temp=stack.remove(); // get the params
		funNode.children[2]= (ParamsNode)temp;

		temp=stack.remove(); // get the id
		funNode.children[1]= new IdentifierNode((Token)temp);

		temp=stack.remove(); // get the type		
	    }
	    else {

		funNode = new FunDeclNode(5);
		
		temp=stack.remove();		
		funNode.children[4]= (CompStmtNode)temp;		
		
		temp=stack.remove(); // get the params
		funNode.children[3]= (ParamsNode)temp;

		temp=stack.remove(); // get the id
		funNode.children[2]= new IdentifierNode((Token)temp);

		temp=stack.remove(); // get the *

		funNode.children[1]= (TerminalNode)new TerminalNode((Token)temp);



		temp=stack.remove(); // get the type		
	    }

	    funNode.linenumber=((Token)temp).lineNumber;
	    String string = temp.toString();
	    if(string.compareTo("int") == 0)
		funNode.children[0]=new IntNode((Token)temp);
	    else if(string.compareTo("float") == 0)
		funNode.children[0]=new FloatNode((Token)temp);
	    else
		funNode.children[0]=new VoidNode((Token)temp);
	    

	    stack.insert(funNode);
	    
	    return true;	    
	}
   	    
	//if method hasn't returned TRUE yet, it means something failed, so return false.
	return false;
    
    } // end of parseFunDecl()
    
    /*
    
    private boolean parseFunDecl(){
	FunDeclNode funNode = new FunDeclNode(0);
	Object temp;
	boolean succ = false;
	int old_stackpointer = stack.getStackPointer();
	
	temp=stack.getNext();
	
	if(!(temp instanceof Token)){
	    errorHandler(old_stackpointer, FUNDECL, "Token");
	    return false;
	}
	    
	
	if (temp instanceof EOFToken)
	    {
		stack.setStackPointer(old_stackpointer);
		return false;
	    }
		    
	if (((Token)temp).symbolNumber == 0 || ((Token)temp).symbolNumber == 1 || ((Token)temp).symbolNumber == 2) //if token is int, float, or void
	    temp=stack.getNext();
	else if(errorHandler(old_stackpointer, FUNDECL, "int, float, or void"))
	    return false;
	   
	if(temp instanceof IdentifierToken) //If token is an identifier	
	    {
		succ = parseParams(); //try to parse next tokens as params
		//stack.incStackPointer();
	    }
	else if(errorHandler(old_stackpointer, FUNDECL, "identifier"))
	    return parseVarDecl();
	else
	    return false;
	   
	
	if(succ){
	    succ = parseCompStmt(); //try to parse next tokens as a compd statement
	    stack.incStackPointer();
	}
	else if(errorHandler(old_stackpointer, FUNDECL, "valid parameters"))
	    return parseVarDecl();
	else
	    return false;
	    

	if (succ){
 	    
	    funNode = new FunDeclNode(4);
	    temp=stack.remove();
	    
	    funNode.children[3]= (CompStmtNode)temp;
		    
	 
	    temp=stack.remove(); // get the params
	    funNode.children[2]= (ParamsNode)temp;

	    temp=stack.remove(); // get the id
	    funNode.children[1]= new IdentifierNode((Token)temp);
	    temp=stack.remove(); // get the type
	    funNode.linenumber=((Token)temp).lineNumber;
	    String string = temp.toString();
	    if(string.compareTo("int") == 0)
		funNode.children[0]=new IntNode((Token)temp);
	    else if(string.compareTo("float") == 0)
		funNode.children[0]=new FloatNode((Token)temp);
	    else
		funNode.children[0]=new VoidNode((Token)temp);
	    
	    stack.insert(funNode);
	    
	    return true;	    
	}
   	    
	//if method hasn't returned TRUE yet, it means something failed, so return false.
	return false;
    
    } // end of parseFunDecl()
    */
  
    private boolean parseParams(){
	boolean succ = true;
	boolean gotOne = false;
	int numParams = 0;
	ParamsNode paramsNode;
	Object temp;
	int old_stackpointer = stack.getStackPointer();

	temp = stack.getNext();
	
	if(((Token)temp).symbolNumber == 8) //If token is a "("
	    stack.remove();
	else if(errorHandler(old_stackpointer, PARAMS, "("))
	    return parseParam();
	else
	    return false;  
	  
	temp=stack.getNext();
	if(((Token)temp).symbolNumber==2) //temp is void	
	    {
		if(((Token)(temp=stack.getNext())).symbolNumber==9)// ')', case of 'void' params
		    {
			paramsNode= new ParamsNode(1);
			stack.remove();
			paramsNode.children[0]= new VoidNode((Token)stack.remove());

			paramsNode.linenumber=((Token)temp).lineNumber;

			stack.insert(paramsNode);
			stack.incStackPointer();
			return true;
		    }
		else
		    stack.decStackPointer();
	    }
	
	stack.decStackPointer();
	while(succ==true){
	    
	    succ = parseParam();
	    
	    if(succ){
		stack.incStackPointer();
		gotOne = true;
		numParams++;

		temp = stack.getNext();
		if(((Token)temp).symbolNumber == 33) //if it's ","
		    stack.remove();
		else {
		    succ = false;
		    stack.decStackPointer();
		}
    }
	}
	
	temp = stack.getNext();

	if(((Token)temp).symbolNumber == 9){ //If token is a ")"
	    stack.remove();	    
	    succ=true;
	}
	else if(errorHandler(old_stackpointer, PARAMS, ")"))
	    return parseParam();
	else
	    return false;
		
	if(gotOne && succ){
   	    paramsNode = new ParamsNode(numParams);	    
	    for(int i=numParams-1; i >= 0; i--)
		paramsNode.children[i]=(ParamNode)stack.remove();
	    paramsNode.linenumber=paramsNode.children[0].linenumber;

	    stack.insert(paramsNode);
	    stack.incStackPointer();
	   
	    return true;
	}

	return false;
    } // end of parseParams()
  
       
    private boolean parseParam(){
	ParamNode paramNode = new ParamNode(0);
	Object temp;
	int old_stackpointer = stack.getStackPointer();
	
	temp = stack.getNext();

	if(!(temp instanceof Token)){
	    errorHandler(old_stackpointer, PARAM, "Token");
	    return false;
	}
	    	    
	if(((Token)temp).symbolNumber == 0 || ((Token)temp).symbolNumber == 1){ //int or float
	    temp=stack.getNext();

	    if(temp instanceof IdentifierToken){ //If token is an identifier 
		temp=stack.getNext();
	
		if(((Token)temp).symbolNumber == 10){ // if it's "["
		    temp=stack.getNext();

		    if(((Token)temp).symbolNumber == 11){ // if it's "]"
			paramNode = new ParamNode(4);
			
			temp=stack.remove(); //remove the "]"
			paramNode.children[3]=new IdentifierNode((Token)temp);
			temp=stack.remove(); //remove the "["
			paramNode.children[2]=new IdentifierNode((Token)temp);
			temp=stack.remove(); // get the id
			paramNode.children[1]=new IdentifierNode((Token)temp);
			temp=stack.remove(); //get the type
			String string = temp.toString();
			if(string.compareTo("int") == 0)
			    paramNode.children[0]=new IntNode((Token)temp);
			else 
			    paramNode.children[0]=new FloatNode((Token)temp);

			paramNode.linenumber=((Token)temp).lineNumber;
			stack.insert(paramNode);
			return true;
		    }
		    else if(errorHandler(old_stackpointer, PARAM, "]"))
			return parseParam();
		    else
			return false;
		
		}
		else{
		    stack.decStackPointer();
		    paramNode = new ParamNode(2);
		    
		    temp=stack.remove(); //get the id
		    paramNode.children[1]=new IdentifierNode((Token)temp);
		    temp=stack.remove(); //get the type
		    String string = temp.toString();
		    if(string.compareTo("int") == 0)
			paramNode.children[0]=new TerminalNode((Token)temp);
		    else
			paramNode.children[0]=new FloatNode((Token)temp);
		    
		    paramNode.linenumber=((Token)temp).lineNumber;
		    stack.insert(paramNode);
		    return true;
		}
	    }
	    else if(((Token)temp).symbolNumber == 14){ //if it's "*"
		temp=stack.getNext();
		if(temp instanceof IdentifierToken){
		    paramNode = new ParamNode(3);
			
		    temp=stack.remove(); // get the id
		    paramNode.children[2]=new IdentifierNode((Token)temp);
		    temp=stack.remove(); //get the "*"
		    paramNode.children[1]=new TerminalNode((Token)temp);
		    temp=stack.remove(); // get the type
		    String string = temp.toString();
		    if(string.compareTo("int") == 0)
			paramNode.children[0]=new TerminalNode((Token)temp);
		    else
			paramNode.children[0]=new FloatNode((Token)temp);
			
		    paramNode.linenumber=((Token)temp).lineNumber;			
		    stack.insert(paramNode);
		    return true;
		}
		else if(errorHandler(old_stackpointer, PARAM, "Identifier"))
		    return parseParam();
		else
		    return false;
		    
	    }
	    else if(errorHandler(old_stackpointer, PARAM, "Identifier or *"))
		return parseParam();
	    else
		return false;
		
	}
	else if(((Token)temp).symbolNumber == 2) // void
	    temp = stack.getNext();
	else if(errorHandler(old_stackpointer, PARAM, "int, float or void"))
	    return parseParam();
	else
	    return false;
	    
	
	if(((Token)temp).symbolNumber == 14)// if it's "*"
	    temp=stack.getNext();
	else if(errorHandler(old_stackpointer, PARAM, "*"))
	    return parseParam();
	else
	    return false;
	    

	if(temp instanceof IdentifierToken){
	    paramNode = new ParamNode(3);

	    temp=stack.remove(); // get the id
	    paramNode.children[2]=new IdentifierNode((Token)temp);
	    temp=stack.remove(); //get the "*"
	    paramNode.children[1]=new TerminalNode((Token)temp);
	    temp=stack.remove(); //get the type
	    paramNode.children[0]=new VoidNode((Token)temp);
	    
	    paramNode.linenumber=((Token)temp).lineNumber;
	    stack.insert(paramNode);
	    return true;
	}
	else if(errorHandler(old_stackpointer, PARAM, "Identifier"))
	    return parseParam();
	else
	    return false;
	    
		
	//stack.setStackPointer(old_stackpointer);
	//return false;
    }// end of parseParam()

    /*    
    private boolean errorHandler(){
	return true;
    }
    */

    private boolean parseCompStmt(){
	
	boolean succ = true;
	boolean ld = false; //does compound statement have local declarations?
	boolean sl = false; //does compound statement have a statement list?
	int old_stackpointer = stack.getStackPointer();
	CompStmtNode compStmtNode = new CompStmtNode(0);

	Object temp = stack.getNext();

	
	if ((!(temp instanceof Token)) && 
	    !(errorHandler(old_stackpointer, COMPSTMT, "Token")))	    
	    return false;

	if((((Token)temp).symbolNumber == 31)){ //if it's "{"
	    //code added in phase 3 to handle {}
	    //---------------------------------
	    temp=stack.getNext();
	    if((((Token)temp).symbolNumber == 32)){ //if it's "}"
		stack.remove(); // remove the }
		stack.remove(); // remove the {
		compStmtNode.linenumber = ((Token)temp).lineNumber;
		stack.insert(compStmtNode);
		return true;
	    }
	    else {
		stack.decStackPointer();
	    }
	    //--------------------------------
	    succ = parseLocalDecs();	   
	}
	else {
	    //special intervention: will have to fail this function if something that is not a { is found
	    //or else everything becomes mad recursive.
	    stack.setStackPointer(old_stackpointer);
	    return false;
	}
	
	
	if(succ){
	    ld = true;
	    stack.incStackPointer();
	    succ = parseStmtList();
	   
	}
	else 
	    succ = parseStmtList();	
	if(succ){
	    stack.incStackPointer();
	    temp = stack.getNext();
	    sl = true;
	} 
	else {
	    temp = stack.getNext();
	}


	
	if(( temp instanceof Token &&  ((Token)temp).symbolNumber == 32)){ //if it's "}"
	    compStmtNode = new CompStmtNode(2);

	    if(ld && sl){
		
		temp=stack.remove(); // remove the "}"
		temp=stack.remove(); //get the StmtList
		compStmtNode.children[1]= (StmtListNode)temp;
		temp=stack.remove(); // get the LocalDecs
		compStmtNode.children[0]= (LocalDecsNode)temp;
		temp=stack.remove(); //remove the "{"

		compStmtNode.linenumber=((Token)temp).lineNumber;
		stack.insert(compStmtNode);	
		return true;
	    }
	    
	    if(sl){
		compStmtNode = new CompStmtNode(1);

		temp=stack.remove(); // remove the "}"
		temp=stack.remove(); //get the StmtList
		compStmtNode.children[0]= (StmtListNode)temp;
		temp=stack.remove(); // remove the "{"

		compStmtNode.linenumber=((Token)temp).lineNumber;
		stack.insert(compStmtNode);	
		return true;
	    } 
	    
	    if(ld){
		compStmtNode = new CompStmtNode(1);

		temp=stack.remove(); // remove the "}"
		temp=stack.remove(); //get the LocalDecs
		compStmtNode.children[0]= (LocalDecsNode)temp;
		temp=stack.remove(); // remove the "{"

		compStmtNode.linenumber=((Token)temp).lineNumber;
		stack.insert(compStmtNode);	
		return true;
	    }
	}   
	else 
	    errorHandler(old_stackpointer, COMPSTMT, "}");

	//may return false since there may be no localdecs or statementlist
	return false;

    } // end of parseCompStmt()

    
    private boolean parseLocalDecs(){
	LocalDecsNode localDecsNode = new LocalDecsNode(0);
	int old_stackpointer = stack.getStackPointer();

	boolean succ = true;
	int numChildren = -1;

	while(succ==true)
	    {
		succ = parseVarDecl();
	
		if(succ)
		    {
			stack.incStackPointer();
			numChildren++;
		    }
	    }

	if(numChildren != -1){
	    localDecsNode = new LocalDecsNode(numChildren+1);
	    //stack.decStackPointer(); //can't remember why we do this...
	    for(int i = numChildren; i >= 0;i--){
		localDecsNode.children[i]=(VarDeclNode)stack.remove();
	    }

	    localDecsNode.linenumber=localDecsNode.children[0].linenumber;

	    stack.insert(localDecsNode);
	    //System.out.println("leaving parseLocalDecs, stack:" + stack.toString() + " stackpointer = " + stack.getStackPointer());
	    return true;
	}
	else{
	    stack.setStackPointer(old_stackpointer);
	    return false;
	}
    } // end of parseLocalDecs()
    

    private boolean parseStmtList(){
	//parseStmtList was modified because it returns a node with 2 children for a 1 statement list
	
	StmtListNode stmtListNode = new StmtListNode(0);
	int old_stackpointer = stack.getStackPointer();
	
	boolean succ = true;
	int numChildren = 0;


	while(succ==true){
	    succ = parseStmt();
		
	    if(succ)
		{
		   
		    stack.incStackPointer();
		    numChildren++;
		}
	}

	//System.out.println("stmt-list:::::::, stackpointer: " + stack.getStackPointer() + " stack: " + stack);

	if(numChildren != 0){
	    
	    stmtListNode = new StmtListNode(numChildren); // this line was modified in SemAnl stage because array need only be as long as the number of children of stmtList
	    
	    for(int i = numChildren-1; i >= 0;i--){
		Object temp = stack.remove();
		if(! (temp instanceof StatementNode)){
		    errorHandler(old_stackpointer, STMTLIST, "Statement");
		    return false;
		}

		stmtListNode.children[i]=(StatementNode)temp;
	    }
	    
	    stmtListNode.linenumber=stmtListNode.children[0].linenumber;

	    stack.insert(stmtListNode);
	    return true;
	}
	else{
	    stack.setStackPointer(old_stackpointer);
	    return false;
	}
    } // end of parseStmtList()

  
    // might be some modifying required for the below function
    // for now, StatementNode is an abstract class. This is the only
    // function right now that doesn't make anything
    private boolean parseStmt(){
	int old_stackpointer = stack.getStackPointer();
	boolean succ = true;

	//Object temp=stack.getNext();
	
	//System.out.println("parseStmt:::: stackPointer: " + stack.getStackPointer() + " stack: " + stack);
	succ = parseExprStmt();
	if(!succ)
	    succ = parseCompStmt();
	if(!succ)
	    succ = parseIfStmt();
	if(!succ)
	  succ = parseWhileStmt();
	if(!succ)
	    succ = parseForStmt();
	if(!succ)
	    succ = parseReturnStmt();
	if(succ)
	    return true;
	else {

	    // new code added in phase 3
	    //---------------------------------
	    Object temp = stack.getNext();
	    if ((temp instanceof Token) && (((Token)temp).symbolNumber== 34)){
		stack.remove();//remove the ;
		stack.insert(new ExprStmtNode(0));
		return true;
	    }
	    else
		stack.decStackPointer();	
	    //---------------------------------
	}
	    return false;
    }

    private boolean parseIfStmt(){
	IfStmtNode ifStmtNode = new IfStmtNode(0);
	int old_stackpointer = stack.getStackPointer();

	boolean succ = true;
	
	//System.out.println("in if-stmt");
	Object temp = stack.getNext();
	if(! ((temp instanceof Token) && (((Token)temp).symbolNumber == 3))){ // has to be an 'if'	    
	    stack.decStackPointer();
	    return false;
	}

	ifStmtNode.linenumber=((Token)temp).lineNumber;

	stack.decStackPointer();
	succ=parseIfStart();
	if(succ)
	    {
		stack.incStackPointer();
		succ=parseIfRem();
	    }
	else
